--- a/index.css
+++ b/index.css
@@ -2,4 +2,99 @@ html{
     width: 100%;
     height: 100%;
     background:linear-gradient(pink 30%,orange 70%) ;
+    font-family: cursive;
+    overflow: hidden;
+}
+.game{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.controls{
+    display: flex;
+    gap:20px;
+    margin-bottom: 20px;
+}
+button{
+    background: blue;
+    color: aqua;
+    border-radius: 10px ;
+    border: 5px solid none;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: 700;
+}
+.disabled{
+    color: brown;
+}
+.stats{
+    color: wheat;
+    font-weight: 800;
+    
+}
+.board-container{
+    position: relative;
+}
+.board, .win{
+    border-radius: 5px;
+    box-shadow: 25px;
+    background-color:lightgrey;
+    transition: transform.6s cubic-bezier(0.4, 0.0, 0.2,1);
+    backface-visibility: hidden;
+    
+}
+.board{
+    padding:20px;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap:20px;
+}
+.board-container.flipped.board{
+    transform: rotateY(180deg) rotateZ(50deg);
+}
+.board-container.flipped.win{
+    transform: rotateY(0) rotateZ(0);
+}
+.card{
+    position:relative;
+    width: 100px;
+    cursor: pointer;
+}
+.card-front, .card-back{
+    position:absolute;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transition: transform .6s cubic-bezier(0.4, 0.0, 0.2,1);
+    backface-visibility: hidden;
+}
+.card-back{
+    transform:rotateY(180deg) rotateZ(50deg);
+    font-size: 28pt;
+    user-select: none;
+    text-align: center;
+    line-height: 100px;
+    background-color: rgb(221, 221, 235);
+}
+.card.flipped .card-front{
+    transform:rotateY(180deg) rotateZ(50deg);
+}
+.card.flipped .card-back{
+    transform:rotateY(0) rotateZ(0);
+}
+.win{
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: wheat;
+    transform:rotateY(180deg) rotateZ(50deg);
+}
+.highlight{
+    color: rgb(197, 147, 72);
 }
